@@ -1,6 +1,9 @@
 CHANGES IN FLTK 1.1.0rc3
 
 	- Documentation updates.
+	- Fixed some redraw() bugs, and now redraw portions of
+	  the parent widget when the label appears outside the
+	  widget.
 	- The boolean (char) value methods in Fl_Preferences
 	  have been removed since some C++ compilers can't
 	  handle char and int value methods with the same name.
